--- a/css/stylesite.css
+++ b/css/stylesite.css
@@ -4,6 +4,8 @@ body {
   font-family: "Roboto Mono", monospace;
   color: #222;
   line-height: 1.6;
+  padding-top: 68px;
+  margin: 0;
 }
 
 h2 {
@@ -21,10 +23,16 @@ h2 {
   align-items: center;
   justify-content: space-between;
 }
-
 .site-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
   background: #111a37;
   padding: 1rem 0;
+  z-index: 1000;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 .logo {
@@ -115,6 +123,7 @@ h2 {
 .btn-secondary {
   background: #8fd300;
   color: #fff;
+  border: none;
 }
 .btn-dark {
   background: #0f1946;
@@ -140,17 +149,44 @@ h2 {
 }
 .grid-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   margin-top: 2rem;
 }
+
 .card {
+  position: relative;
   background: #0f1946;
   color: #fff;
-  padding: 1rem;
-  border-radius: 6px;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, background 0.3s ease, box-shadow 0 3s ease;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-/* Story */
+
+.card::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 8px;
+  width: 100%;
+  background: #8fd300;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  background: #19225e;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+/* História e Propósito*/
 .story {
   background: #f7f7f7;
   padding: 4rem 0;
@@ -247,4 +283,49 @@ h2 {
   color: #fff;
   text-align: center;
   padding: 1rem 0;
+}
+
+/* pop-up */
+.modal-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-content {
+  background: white;
+  max-width: 800px;
+  width: 90%;
+  padding: 2rem;
+  border-radius: 8px;
+  text-align: center;
+  position: relative;
+}
+
+.modal-content h2 {
+  margin-bottom: 1rem;
+}
+
+.modal-content iframe {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 6px;
+}
+
+.btn-close {
+  background: #8fd300;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 4px;
 }
